# Notes

API/: .envrc  LICENSE  Spec.md  docker-compose.yaml  pyproject.toml
API/notes_api/: __main__.py
